--- a/app/resources/css/style.css
+++ b/app/resources/css/style.css
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+body
+{
+  background: #e3ebee !important;
+  padding: 80px 0 0 0;
+}
 body, input, button
 {
     font-family: 'Roboto Mono', monospace;
@@ -63,6 +68,51 @@ header button
     -ms-appearance: none;
     -o-appearance: none;
     appearance: none;
+    cursor: pointer;
+}
+
+header button svg
+{
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -8px 0 0 -8px;
+}
+
+header button svg .fill
+{
+  fill: #25b99a;
+}
+
+.container
+{
+  width: 100%; 
+  float: left;
+  padding: 15px; 
+}
+
+ul.todo
+{
+  width: 100%; 
+  float: left;
+}
+
+ul.todo li
+{
+  width: 100%;
+  height: 50px;
+  float: left;
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 0px 1px 2px rgba(44, 62, 80, 0.10);
+  margin: 0 0 10px 0;
+}
+
+ul.todo li:last-of-type
+{
+  margin: 0;
 }
 
 /*place holders for most browsers available*/
