--- a/app/resources/css/style.css
+++ b/app/resources/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 body
 {
-  background: #e3ebee !important;
+  background: #e3ebee;
   padding: 80px 0 0 0;
 }
 body, input, button
@@ -102,14 +102,19 @@ ul.todo
 ul.todo li
 {
   width: 100%;
-  height: 50px;
+  min-height: 50px;
   float: left;
   position: relative;
+  font-size: 14px;
+  font-weight: 500;
+  color: #444;
+  line-height: 22px; 
   background: #fff;
   border-radius: 5px;
   box-shadow: 0px 1px 2px rgba(44, 62, 80, 0.10);
   margin: 0 0 10px 0;
-  padding: 0 100px 0 0;
+  padding: 14 100px 14 14;
+
 }
 
 ul.todo li:last-of-type
@@ -131,6 +136,7 @@ ul.todo li .buttons button
   width: 50px;
   height: 50px;
   float: left;
+  position: relative;
   background: none;
   border: 0px; 
   box-shadow: none;
@@ -140,6 +146,37 @@ ul.todo li .buttons button
   -ms-appearance: none;
   -o-appearance: none;
   appearance: none;
+}
+
+ul.todo li .buttons button:last-of-type:before
+{
+  content: '';
+  width: 1px; 
+  height: 30px;
+  position: absolute;
+  top: 10px; 
+  left: 0px;
+  background: #e3ebee;
+}
+
+ul.todo li .buttons button svg
+{
+  width: 22px;
+  height: 22px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -11px 0 0 -11px;
+}
+
+ul.todo li .buttons button.remove svg .fill
+{
+   fill: #c0cecb;
+}
+
+ul.todo li .buttons button.remove:hover svg .fill
+{
+  fill: #e85656; 
 }
 
 /*place holders for most browsers available*/
