--- a/app/resources/css/style.css
+++ b/app/resources/css/style.css
@@ -114,7 +114,6 @@ ul.todo li
   box-shadow: 0px 1px 2px rgba(44, 62, 80, 0.10);
   margin: 0 0 10px 0;
   padding: 14 100px 14 14;
-
 }
 
 ul.todo li:last-of-type
@@ -141,6 +140,7 @@ ul.todo li .buttons button
   border: 0px; 
   box-shadow: none;
   outline: none;
+  cursor: pointer;
   -webkit-appearance: none;
   -moz-appearance: none;
   -ms-appearance: none;
@@ -172,6 +172,15 @@ ul.todo li .buttons button svg
 ul.todo li .buttons button.remove svg .fill
 {
    fill: #c0cecb;
+}
+
+ul.todo li .buttons button svg .fill
+{
+  transition: fill 0.2s ease;
+  -webkit-transition: fill 0.2s ease;
+  -moz-transition: fill 0.2s ease;
+  -ms-transition: fill 0.2s ease;
+  -o-transition: fill 0.2s ease; 
 }
 
 ul.todo li .buttons button.remove:hover svg .fill
