--- a/app/resources/css/style.css
+++ b/app/resources/css/style.css
@@ -170,11 +170,6 @@ ul.todo li .buttons button svg
   margin: -11px 0 0 -11px;
 }
 
-ul.todo li .buttons button.remove svg .fill
-{
-   fill: #c0cecb;
-}
-
 ul.todo li .buttons button svg .fill
 {
   transition: fill 0.2s ease;
@@ -184,9 +179,26 @@ ul.todo li .buttons button svg .fill
   -o-transition: fill 0.2s ease; 
 }
 
+ul.todo li .buttons button.complete svg
+{
+  border-radius: 11px;
+  border: 1.5px solid #25b99a;
+  background: #fff !important;
+}
+
+ul.todo li .buttons button.remove svg .fill
+{
+   fill: #c0cecb;
+}
+
 ul.todo li .buttons button.remove:hover svg .fill
 {
   fill: #e85656; 
+}
+
+ul.todo li .buttons button.complete svg .fill
+{
+   fill: #25b99a;
 }
 
 /*place holders for most browsers available*/
