transition is not working on the 'done' button

--- a/app/resources/css/style.css
+++ b/app/resources/css/style.css
@@ -208,8 +208,30 @@ ul.todo li .buttons button.complete svg
 {
   border-radius: 11px;
   border: 1.5px solid #25b99a;
-  background: #fff !important;
+  transition: background 0.2s ease;
 }
+
+ul.todo#completed li .buttons button.complete svg
+{
+  background: #25b99a;
+  border: 0px;
+}
+
+ul.todo:not(#completed) li .buttons button.complete:hover svg
+{
+  background: rgba(37, 185, 154, 0.9);  
+}
+
+ul.todo:not(#completed) li .buttons button.complete:hover svg .fill
+{
+  fill: #fff;
+}
+
+ul.todo#completed li .buttons button.complete svg .fill
+{
+  fill: #fff;
+}
+
 
 ul.todo li .buttons button.remove svg .fill
 {
